--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-button": "^2.3.0",
     "react-navigation": "^2.3.1"
   },
   "devDependencies": {
