--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-button": "^2.3.0",
+    "react-native-segmented-control-tab": "^3.2.2",
+    "react-native-slider": "^0.11.0",
+    "react-native-switch-pro": "^1.0.0-beta",
     "react-navigation": "^2.3.1"
   },
   "devDependencies": {
