--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-navigation": "^2.3.1"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.1.0",
@@ -23,5 +24,8 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
