--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-native-segmented-control-tab": "^3.2.2",
     "react-native-slider": "^0.11.0",
     "react-native-switch-pro": "^1.0.0-beta",
-    "react-navigation": "^2.3.1"
+    "react-navigation": "^2.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
