--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "standard": "^11.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
